allow to sort user's repositories

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -134,6 +134,11 @@ a.badge {
   --#{$prefix}popover-body-color: var(--font-color);
 }
 
+.vertical-center {
+  display: flex;
+  align-items: center;
+}
+
 #stand-with-ukraine {
   .blue-band {
     background-color: #0057b8;
