change dark theme

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .modal-content {
-  background-color: var(--main-bg-color);
+  background-color: var(--navbar-bg-color);
   color: var(--font-color);
 }
 
