use bootstrap table class for all tables in readme

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -464,6 +464,10 @@ ul.not-list {
   overflow-wrap: break-word;
 
   table {
+    @extend .table;
+    @extend .table-bordered;
+    @extend .table-striped;
+
     thead {
       text-align: center;
     }
