update style names

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -363,7 +363,7 @@ ul.not-list {
   }
 }
 
-.shards__shard_github ul {
+.shards__shard_stats ul {
   padding-left: 0;
   padding-top: 5px;
   margin-bottom: 0;
